# nex-backend

./: .gitignore  README.md  pyproject.toml  pytest.ini  run.py
app/: main.py
app/api/: __init__.py
app/api/endpoints/: infection_detection_endpoint.py
app/core/: config.py
app/data/: microbiology.csv  transfers.csv
app/infrastructure/schemas/request_schemas/: infection_detection_request_schemas.py
app/infrastructure/schemas/response_schemas/: __init__.py  common_response_schemas.py  infection_detection_response_schemas.py  infection_detection_schemas.py
app/infrastructure/services/: __init__.py  infection_detection_service.py  llm_analyzer_service.py
app/infrastructure/utils/: exception_handler_utils.py  exception_utils.py
scripts/: test.sh
tests/: conftest.py
tests/fixtures/: sample_data.py
tests/unit/: test_config.py  test_endpoints.py  test_exception_utils.py  test_infection_detection_service.py
